--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.1",
+    "nodemailer": "^6.9.15",
+    "redis": "^4.7.0",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
