--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.11.1",
     "nodemailer": "^6.9.15",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4",
     "redis": "^4.7.0",
     "sequelize": "^6.37.3"
   },
