--- a/src/config/config.json
+++ b/src/config/config.json
@@ -3,8 +3,8 @@
     "username": "postgres",
     "password": "12345678",
     "database": "moneymanager",
-    "port": "5433",
-    "host": "localhost",
+    "port": "5432",
+    "host": "database",
     "dialect": "postgres",
     "connectionLimit": 100
   },
