--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bull-board/express": "^6.9.1",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.5",
